--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -1,3 +1,4 @@
+@import './alert';
 @import './card';
 @import './container';
 @import './columns';
@@ -7,4 +8,5 @@
 @import './navbar';
 @import './quicklinks';
 @import './sidebar';
+@import './tag';
 @import './text-editor';
