--- a/resources/sass/components/card.scss
+++ b/resources/sass/components/card.scss
@@ -4,26 +4,41 @@
 	box-shadow: var(--size-shadow-x) var(--size-shadow-y) var(--size-shadow-spread) var(--color-shadow);
 
 	&-header {
+		display: block;
 		margin: 0;
 		padding: .5rem 1rem;
 		font-size: 1.25rem;
 		font-weight: normal;
 		background-color: var(--color-navy);
 		color: #fff;
-		border-radius: var(--size-radius) var(--size-radius) 0 0;
 	}
 
 	&-body {
+		display: block;
 		margin: 0;
 		padding: 1rem;
 		background-color: #fff;
+
 	}
 
 	&-footer {
+		display: block;
 		margin: 0;
 		padding: .5rem 1rem;
 		background-color: #fff;
 		border-top: 1px solid var(--color-navy);
-		border-radius: 0 0 var(--size-radius) var(--size-radius);
+	}
+
+	& > :first-child {
+		border-top-left-radius: var(--size-radius);
+		border-top-right-radius: var(--size-radius);
+	}
+	& > :last-child {
+		border-bottom-left-radius: var(--size-radius);
+		border-bottom-right-radius: var(--size-radius);
+	}
+
+	& + & {
+		margin-top: 1rem;
 	}
 }
