--- a/resources/sass/components/form.scss
+++ b/resources/sass/components/form.scss
@@ -12,7 +12,11 @@ fieldset {
 	display: block;
 	width: 100%;
 	margin-top: 1rem;
-	margin-bottom: 3rem;
+	margin-bottom: 1rem;
+
+	& + & {
+		margin-top: 3rem;
+	}
 
 	&.submit {
 		text-align: right;
@@ -70,6 +74,19 @@ fieldset {
 		&:focus {
 			box-shadow: var(--size-shadow-x-hover) var(--size-shadow-y-hover) var(--size-shadow-spread-hover) var(--color-shadow-hover);
 		}
+
+		&.is-info {
+			background-color: var(--color-info);
+		}
+		&.is-success {
+			background-color: var(--color-success);
+		}
+		&.is-warning {
+			background-color: var(--color-warning);
+		}
+		&.is-danger {
+			background-color: var(--color-danger);
+		}
 	}
 }
 
@@ -83,6 +100,7 @@ fieldset {
 		font-family: var(--font-family-main);
 		font-size: var(--font-size-base);
 		font-weight: var(--font-weight-base);
+		white-space: nowrap;
 		background-color: #fff;
 		border: 0;
 		border-bottom: 1px solid var(--color-input-border);
