Improve sports list display in club edit page

--- a/resources/sass/components/tag.scss
+++ b/resources/sass/components/tag.scss
@@ -2,6 +2,7 @@
 	display: inline-block;
 	border: 1px solid currentColor;
 	color: var(--color-tag);
+	background: #fff;
 	border-color: var(--color-tag);
 	border-radius: var(--size-radius);
 
@@ -44,6 +45,7 @@
 		font-family: inherit;
 		line-height: inherit;
 		white-space: nowrap;
+		background: inherit;
 		border: 0;
 		border-left: 1px solid;
 		border-color: inherit;
