--- a/resources/sass/components/sidebar.scss
+++ b/resources/sass/components/sidebar.scss
@@ -2,14 +2,14 @@
 	position: fixed;
 	top: var(--size-navbar-height);
 	bottom: 0;
-	left: calc(-1 * var(--size-sidebar-width));
 	width: var(--size-sidebar-width);
 	z-index: 97;
 	background-color: var(--color-sidebar-bg);
 	color: var(--color-sidebar);
 	overflow-x: hidden;
 	overflow-y: auto;
-	transition: box-shadow linear 150ms, left linear 150ms;
+	transition: box-shadow ease-in-out 150ms, transform ease-in-out 150ms;
+	transform: translateX(-100%);
 
 	a {
 		text-decoration: none;
@@ -24,17 +24,27 @@
 		}
 	}
 
-	& ~ #main-content {
-		transition: margin-left linear 150ms;
+	@media all and (max-width: map-get($sizes, "md")) {
+		width: calc(100vw -var(--size-navbar-height));
+
+		&.open {
+			transform: translateX(0);
+			box-shadow: 0 0 var(--size-shadow-spread) var(--color-shadow);
+		}
 	}
 }
 
 @media all and (min-width: map-get($sizes, "md")) {
+	.sidebar-toggler {
+		display: none !important;
+	}
+
 	#sidebar {
-		left: 0;
+		transform: translateX(0);
 		box-shadow: 0 0 var(--size-shadow-spread) var(--color-shadow);
 
 		& ~ #main-content {
+			transition: margin-left ease-in-out 150ms;
 			margin-left: var(--size-sidebar-width);
 		}
 	}
