Display notifications on all dashboard pages

--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -6,6 +6,7 @@
 @import './form';
 @import './hero';
 @import './navbar';
+@import './notification';
 @import './quicklinks';
 @import './sidebar';
 @import './tag';
