--- a/resources/sass/components/hero.scss
+++ b/resources/sass/components/hero.scss
@@ -2,6 +2,7 @@
 	padding: 2rem;
 	margin: 0;
 	background-color: var(--color-orange);
+	background-image: linear-gradient(15deg, var(--color-orange) 0, var(--color-orange) 30%, var(--color-red) 80%, var(--color-red) 100%);
 	color: #fff;
 	overflow: hidden;
 
