--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -37,6 +37,8 @@ $colors: (
 	"red": #f25050,
 	"grey": #bfbfbf,
 	// Alert/Generic colors
+	"primary": #326a8c,
+	"secondary": #f2a71b,
 	"info": #2d7cad,
 	"success": #78b01e,
 	"warning": #e3731f,
@@ -61,3 +63,5 @@ $colors: (
 	"table-border": #bfbfbf,
 	"table-stripe": #ffffff,
 );
+
+$accents: primary, secondary, info, success, warning, danger;
