Start removing navbar from dashboard

--- a/resources/sass/common/common.scss
+++ b/resources/sass/common/common.scss
@@ -55,6 +55,12 @@ a {
 	}
 }
 
+.ellipsis {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .text-left {
 	text-align: left;
 }
