--- a/resources/sass/components/dropdown.scss
+++ b/resources/sass/components/dropdown.scss
@@ -67,6 +67,8 @@
 			}
 
 			&.selected {
+				background-color: var(--color-sidebar-hover-bg);
+
 				&::after {
 					content: '✓';
 					position: absolute;
