--- a/resources/sass/components/columns.scss
+++ b/resources/sass/components/columns.scss
@@ -4,23 +4,22 @@
 	flex-wrap: wrap;
 
 	& > .column {
-		@media all and (min-width: #{map-get($sizes, "sm")}) {
-			flex: 1 1 0;
-		}
+		flex: 1 1 auto;
 		padding: 0 1rem;
 		margin: 1rem 0;
+		max-width: calc(100vw - 2rem);
 
 		@media all and (min-width: #{map-get($sizes, "sm")}) {
 			&.col-sm {
-				flex-basis: calc(var(--size-column-min-width) * 0.6);
+				flex-basis: 33.33%;
 			}
 
 			&.col-md {
-				flex-basis: calc(var(--size-column-min-width) * 1.5);
+				flex-basis: 50%;
 			}
 
 			&.col-lg {
-				flex-basis: calc(var(--size-column-min-width) * 3);
+				flex-basis: 66.66%;
 			}
 		}
 	}
