--- a/resources/sass/components/sidebar.scss
+++ b/resources/sass/components/sidebar.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	display: flex;
 	flex-direction: column;
-	top: var(--size-navbar-height);
+	top: 0;
 	bottom: 0;
 	width: var(--size-sidebar-width);
 	z-index: 97;
