--- a/resources/sass/common/common.scss
+++ b/resources/sass/common/common.scss
@@ -32,6 +32,14 @@ a {
 	display: none !important;
 }
 
+@each $bpname, $bpsize in $sizes {
+	@media all and (max-width: #{$bpsize}) {
+		.show-#{$bpname} {
+			display: none;
+		}
+	}
+}
+
 .sr-only {
 	position: absolute;
 	width: 1px;
