--- a/resources/sass/components/columns.scss
+++ b/resources/sass/components/columns.scss
@@ -2,24 +2,30 @@
 	display: flex;
 	padding: 1rem;
 	flex-wrap: wrap;
+}
 
-	& > .column {
-		flex: 1 1 auto;
-		padding: 0 1rem;
-		margin: 1rem 0;
-		max-width: calc(100vw - 2rem);
+.column {
+	flex: 0 1 100%;
+	max-width: 100%;
+	padding: 0 1rem;
+	margin: 1rem 0;
+}
 
-		@media all and (min-width: #{map-get($sizes, "sm")}) {
-			&.col-sm {
-				flex-basis: 33.33%;
-			}
+@for $i from 1 through 12 {
+	$w: floor(1000 * (100% / 12) * $i) / 1000;
+	.col-#{$i} {
+		flex: 0 0 $w;
+		max-width: $w;
+	}
+}
 
-			&.col-md {
-				flex-basis: 50%;
-			}
-
-			&.col-lg {
-				flex-basis: 66.66%;
+@each $bpname, $bpsize in $sizes {
+	@media all and (min-width: #{$bpsize}) {
+		@for $i from 1 through 12 {
+			$w: floor(1000 * (100% / 12) * $i) / 1000;
+			.col-#{$bpname}-#{$i} {
+				flex: 0 0 $w;
+				max-width: $w;
 			}
 		}
 	}
